// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Templates v1.1.8 - Kitchen Sink Snapshot Tests should match snapshot for enhancement issue: kitchen-sink-enhancement 1`] = `
"# Enhancement Report

## Issue Metadata
- **ID:** issue-enh-456
- **Name:** Add Dark Mode Toggle
- **Type:** enhancement
- **Label:** Modify
- **Title:** Enhancement
- **Page URL:** https://example.com/dashboard
- **Timestamp:** 2024-02-01T00:00:00.000Z

## User Request
**Raw prompt:** Add a dark mode toggle button to the header

**Blockquote format:**
> Add a dark mode toggle button to the header

## Elements Overview
- **Count:** 1 element(s)
- **First element selector:** header.site-header

### First Element (Code Block - Legacy)
\`\`\`html
<header class="site-header">
<nav>...</nav>
</header>
\`\`\`
**CSS Selector:** \`header.site-header\`

### First Element HTML (Plain - Legacy)
\`\`\`html
<header class="site-header">
<nav>...</nav>
</header>
\`\`\`

### All Elements (Legacy Markdown)
\`\`\`html
<header class="site-header">
<nav>...</nav>
</header>
\`\`\`

**CSS Selector:** \`header.site-header\`

### All Elements (Each Iteration)

#### Element 1 of 1
- **Index:** 0
- **First:** true
- **Last:** true

\`\`\`html
<header class="site-header">
<nav>...</nav>
</header>
\`\`\`

**CSS Selector:** \`header.site-header\`
















---
*Generated at 2024-02-01T00:00:00.000Z*
"
`;

exports[`Custom Templates v1.1.8 - Kitchen Sink Snapshot Tests should match snapshot for kitchen sink with React source and all errors: kitchen-sink-react-all-errors 1`] = `
"# Bug Fix Report

## Issue Metadata
- **ID:** issue-react-301
- **Name:** React Component Bug
- **Type:** fix
- **Label:** Fix
- **Title:** Bug Fix
- **Page URL:** https://example.com/login
- **Timestamp:** 2024-02-01T00:00:00.000Z

## User Request
**Raw prompt:** The LoginButton component does not trigger onClick

**Blockquote format:**
> The LoginButton component does not trigger onClick

## Elements Overview
- **Count:** 1 element(s)
- **First element selector:** #login-btn

### First Element (Code Block - Legacy)
\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`
**CSS Selector:** \`#login-btn\`

### First Element HTML (Plain - Legacy)
\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

### All Elements (Legacy Markdown)
\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

**CSS Selector:** \`#login-btn\`

### All Elements (Each Iteration)

#### Element 1 of 1
- **Index:** 0
- **First:** true
- **Last:** true

\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

**CSS Selector:** \`#login-btn\`


**React Component:** \`LoginButton\`
**File Path:** src/components/LoginButton.tsx
**Line:** 42
**Column:** 8
**Location:** src/components/LoginButton.tsx:42:8
**Stack:**
  → App
  → Layout
  → Header
  → LoginForm
  → LoginButton



**Data Test ID:** login-button




## Console Errors
**2 error(s) detected**

### Error
\`\`\`
Uncaught TypeError: Cannot read property 'click' of undefined
\`\`\`

**Stack trace:**
\`\`\`
at handleClick (app.js:42:15)
    at HTMLButtonElement.<anonymous> (app.js:50:10)
\`\`\`
**Source:** \`https://example.com/app.js:42\`

### Error
\`\`\`
Error: Network request failed
\`\`\`

**Stack trace:**
\`\`\`
at fetchData (api.js:15:5)
    at async loadUser (user.js:8:3)
\`\`\`
**Source:** \`https://example.com/api.js:15\`



## Network Errors
**3 failed request(s)**

| Status | Method | URL |
|--------|--------|-----|
| 500 | POST | \`https://api.example.com/auth/login\` |
| 404 | GET | \`https://api.example.com/users/profile\` |
| CORS/Network | GET | \`https://cdn.example.com/assets/missing.js\` |



## Error Summary
This issue has associated errors that may help diagnose the problem.



## Global Custom Attribute: data-testid
**Value:** login-button




---
*Generated at 2024-02-01T00:00:00.000Z*
"
`;

exports[`Custom Templates v1.1.8 - Kitchen Sink Snapshot Tests should match snapshot for kitchen sink with mixed React source: kitchen-sink-mixed-react 1`] = `
"# Bug Fix Report

## Issue Metadata
- **ID:** issue-mixed-react-302
- **Name:** Mixed Elements Issue
- **Type:** fix
- **Label:** Fix
- **Title:** Bug Fix
- **Page URL:** https://example.com/signup
- **Timestamp:** 2024-02-01T00:00:00.000Z

## User Request
**Raw prompt:** Form submission not working

**Blockquote format:**
> Form submission not working

## Elements Overview
- **Count:** 3 element(s)
- **First element selector:** #email

### First Element (Code Block - Legacy)
\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`
**CSS Selector:** \`#email\`

### First Element HTML (Plain - Legacy)
\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`

### All Elements (Legacy Markdown)
### Element 1

\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`

**CSS Selector:** \`#email\`

### Element 2

\`\`\`html
<input type="password" id="password" class="form-input" />
\`\`\`

**CSS Selector:** \`#password\`

### Element 3

\`\`\`html
<button type="submit" class="submit-btn">Submit</button>
\`\`\`

**CSS Selector:** \`button.submit-btn\`

### All Elements (Each Iteration)

#### Element 1 of 3
- **Index:** 0
- **First:** true
- **Last:** 

\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`

**CSS Selector:** \`#email\`


**React Component:** \`EmailInput\`
**File Path:** src/components/forms/EmailInput.tsx
**Line:** 23
**Column:** 4
**Location:** src/components/forms/EmailInput.tsx:23:4
**Stack:**
  → App
  → Form
  → EmailInput




#### Element 2 of 3
- **Index:** 1
- **First:** 
- **Last:** 

\`\`\`html
<input type="password" id="password" class="form-input" />
\`\`\`

**CSS Selector:** \`#password\`





#### Element 3 of 3
- **Index:** 2
- **First:** 
- **Last:** true

\`\`\`html
<button type="submit" class="submit-btn">Submit</button>
\`\`\`

**CSS Selector:** \`button.submit-btn\`


**React Component:** \`SubmitButton\`
**File Path:** src/components/forms/SubmitButton.tsx
**Line:** 15
**Column:** 8
**Location:** src/components/forms/SubmitButton.tsx:15:8
**Stack:**
  → App
  → Form
  → SubmitButton















---
*Generated at 2024-02-01T00:00:00.000Z*
"
`;

exports[`Custom Templates v1.1.8 - Kitchen Sink Snapshot Tests should match snapshot for kitchen sink with multiple elements: kitchen-sink-multi-elements 1`] = `
"# Bug Fix Report

## Issue Metadata
- **ID:** issue-multi-789
- **Name:** Form Validation Issue
- **Type:** fix
- **Label:** Fix
- **Title:** Bug Fix
- **Page URL:** https://example.com/signup
- **Timestamp:** 2024-02-01T00:00:00.000Z

## User Request
**Raw prompt:** Form fields are not validating correctly

**Blockquote format:**
> Form fields are not validating correctly

## Elements Overview
- **Count:** 3 element(s)
- **First element selector:** #email

### First Element (Code Block - Legacy)
\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`
**CSS Selector:** \`#email\`

### First Element HTML (Plain - Legacy)
\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`

### All Elements (Legacy Markdown)
### Element 1

\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`

**CSS Selector:** \`#email\`

### Element 2

\`\`\`html
<input type="password" id="password" class="form-input" />
\`\`\`

**CSS Selector:** \`#password\`

### Element 3

\`\`\`html
<button type="submit" class="submit-btn">Submit</button>
\`\`\`

**CSS Selector:** \`button.submit-btn\`

### All Elements (Each Iteration)

#### Element 1 of 3
- **Index:** 0
- **First:** true
- **Last:** 

\`\`\`html
<input type="email" id="email" class="form-input" />
\`\`\`

**CSS Selector:** \`#email\`




**Data Test ID:** email-input


#### Element 2 of 3
- **Index:** 1
- **First:** 
- **Last:** 

\`\`\`html
<input type="password" id="password" class="form-input" />
\`\`\`

**CSS Selector:** \`#password\`





#### Element 3 of 3
- **Index:** 2
- **First:** 
- **Last:** true

\`\`\`html
<button type="submit" class="submit-btn">Submit</button>
\`\`\`

**CSS Selector:** \`button.submit-btn\`







## Console Errors
**2 error(s) detected**

### Error
\`\`\`
Uncaught TypeError: Cannot read property 'click' of undefined
\`\`\`

**Stack trace:**
\`\`\`
at handleClick (app.js:42:15)
    at HTMLButtonElement.<anonymous> (app.js:50:10)
\`\`\`
**Source:** \`https://example.com/app.js:42\`

### Error
\`\`\`
Error: Network request failed
\`\`\`

**Stack trace:**
\`\`\`
at fetchData (api.js:15:5)
    at async loadUser (user.js:8:3)
\`\`\`
**Source:** \`https://example.com/api.js:15\`



## Network Errors
**3 failed request(s)**

| Status | Method | URL |
|--------|--------|-----|
| 500 | POST | \`https://api.example.com/auth/login\` |
| 404 | GET | \`https://api.example.com/users/profile\` |
| CORS/Network | GET | \`https://cdn.example.com/assets/missing.js\` |



## Error Summary
This issue has associated errors that may help diagnose the problem.



## Global Custom Attribute: data-testid
**Value:** email-input




---
*Generated at 2024-02-01T00:00:00.000Z*
"
`;

exports[`Custom Templates v1.1.8 - Kitchen Sink Snapshot Tests should match snapshot for kitchen sink with no errors: kitchen-sink-no-errors 1`] = `
"# Bug Fix Report

## Issue Metadata
- **ID:** issue-fix-123
- **Name:** Login Button Bug
- **Type:** fix
- **Label:** Fix
- **Title:** Bug Fix
- **Page URL:** https://example.com/login
- **Timestamp:** 2024-02-01T00:00:00.000Z

## User Request
**Raw prompt:** The login button does not respond when clicked

**Blockquote format:**
> The login button does not respond when clicked

## Elements Overview
- **Count:** 1 element(s)
- **First element selector:** #login-btn

### First Element (Code Block - Legacy)
\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`
**CSS Selector:** \`#login-btn\`

### First Element HTML (Plain - Legacy)
\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

### All Elements (Legacy Markdown)
\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

**CSS Selector:** \`#login-btn\`

### All Elements (Each Iteration)

#### Element 1 of 1
- **Index:** 0
- **First:** true
- **Last:** true

\`\`\`html
<button id="login-btn" class="btn primary">Login</button>
\`\`\`

**CSS Selector:** \`#login-btn\`




**Data Test ID:** login-button










## Global Custom Attribute: data-testid
**Value:** login-button




---
*Generated at 2024-02-01T00:00:00.000Z*
"
`;

exports[`Custom Templates v1.1.8 - Kitchen Sink Snapshot Tests should match snapshot for minified React (suppressed): kitchen-sink-minified-react 1`] = `
"# Bug Fix Report

## Issue Metadata
- **ID:** issue-minified-303
- **Name:** Minified React Bug
- **Type:** fix
- **Label:** Fix
- **Title:** Bug Fix
- **Page URL:** https://example.com/prod
- **Timestamp:** 2024-02-01T00:00:00.000Z

## User Request
**Raw prompt:** Something is broken in production

**Blockquote format:**
> Something is broken in production

## Elements Overview
- **Count:** 1 element(s)
- **First element selector:** button.btn

### First Element (Code Block - Legacy)
\`\`\`html
<button class="btn">Click</button>
\`\`\`
**CSS Selector:** \`button.btn\`

### First Element HTML (Plain - Legacy)
\`\`\`html
<button class="btn">Click</button>
\`\`\`

### All Elements (Legacy Markdown)
\`\`\`html
<button class="btn">Click</button>
\`\`\`

**CSS Selector:** \`button.btn\`

### All Elements (Each Iteration)

#### Element 1 of 1
- **Index:** 0
- **First:** true
- **Last:** true

\`\`\`html
<button class="btn">Click</button>
\`\`\`

**CSS Selector:** \`button.btn\`
















---
*Generated at 2024-02-01T00:00:00.000Z*
"
`;
